--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^4.4.0
   get: ^4.7.3
   cloud_firestore: ^6.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
